--- a/package.json
+++ b/package.json
@@ -14,14 +14,24 @@
     "type": "git",
     "url": "git+https://github.com/younis-ahmed/zidsa-action.git"
   },
+  "scripts": {
+    "bundle": "pnpm run format:write && pnpm run package",
+    "ci-test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 npx vitest run",
+    "coverage": "npx make-coverage-badge --output-path ./badges/coverage.svg",
+    "format:write": "npx prettier --write .",
+    "format:check": "npx prettier --check .",
+    "lint": "npx eslint .",
+    "local-action": "npx @github/local-action . src/main.ts .env",
+    "package": "npx rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "package:watch": "pnpm run package -- --watch",
+    "test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 npx vitest run",
+    "all": "pnpm run format:write && pnpm run lint && pnpm run test && pnpm run coverage && pnpm run package"
+  },
   "exports": {
     ".": "./dist/index.js"
   },
   "engines": {
     "node": ">=20"
-  },
-  "scripts": {
-    "test": "vitest"
   },
   "keywords": [
     "zidsa",
