--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "dependencies": {
     "@actions/core": "^1.11.1",
     "archiver": "^7.0.1",
+    "conventional-recommended-bump": "^11.0.0",
     "form-data": "^4.0.2"
   },
   "optionalDependencies": {
