--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "prettier-eslint": "^16.3.0",
     "rollup": "^4.37.0",
     "typescript": "^5.8.2",
-    "vitest": "^3.0.9"
+    "vitest": "^3.0.9",
+    "@antfu/eslint-config": "^4.11.0",
+    "eslint-plugin-format": "^1.0.1"
   },
   "dependencies": {
     "@actions/core": "^1.11.1",
