--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,22 +1,22 @@
 {
-    "$schema": "https://json.schemastore.org/tsconfig",
-    "compilerOptions": {
-      "allowSyntheticDefaultImports": true,
-      "declaration": false,
-      "declarationMap": false,
-      "esModuleInterop": true,
-      "forceConsistentCasingInFileNames": true,
-      "lib": ["ES2022"],
-      "module": "NodeNext",
-      "moduleResolution": "NodeNext",
-      "newLine": "lf",
-      "noImplicitAny": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": false,
-      "pretty": true,
-      "resolveJsonModule": true,
-      "strict": true,
-      "strictNullChecks": true,
-      "target": "ES2022"
-    }
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "compilerOptions": {
+    "target": "ES2022",
+    "lib": ["ES2022"],
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "resolveJsonModule": true,
+    "strict": true,
+    "strictNullChecks": true,
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": false,
+    "declaration": false,
+    "declarationMap": false,
+    "newLine": "lf",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "pretty": true
   }
+}
