--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,23 +26,29 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version-file: .node-version
-          cache: npm
+          cache: pnpm
+
+      - name: Setup PNPM
+        id: setup-pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.12.3
 
       - name: Install Dependencies
         id: npm-ci
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Check Format
         id: npm-format-check
-        run: npm run format:check
+        run: pnpm run format:check
 
       - name: Lint
         id: npm-lint
-        run: npm run lint
+        run: pnpm run lint
 
       - name: Test
         id: npm-ci-test
-        run: npm run ci-test
+        run: pnpm run ci-test
 
   test-action:
     name: GitHub Actions Test
@@ -57,7 +63,9 @@ jobs:
         id: test-action
         uses: ./
         with:
-          milliseconds: 2000
+          EMAIL: ${{ secrets.TEST_EMAIL }}
+          PASSWORD: ${{ secrets.TEST_PASSWORD }}
+          THEME_ID: ${{ secrets.TEST_THEME_ID }}
 
       - name: Print Output
         id: output
