--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -56,3 +56,8 @@ jobs:
           VALIDATE_TYPESCRIPT_ES: false
           VALIDATE_JSON: false
           VALIDATE_TYPESCRIPT_STANDARD: false
+          JAVASCRIPT_PRETTIER: false
+          JSON_PRETTIER: false
+          SHELL_SHFMT: false
+          TYPESCRIPT_PRETTIER: false
+          YAML_PRETTIER: false
