--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -65,3 +65,4 @@ jobs:
           FIX_JSON_PRETTIER: false
           FIX_SHELL_SHFMT: false
           FIX_YAML_PRETTIER: false
+          VALIDATE_YAML: false
