--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "bundle": "pnpm run format:write && pnpm run package",
-    "ci-test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 npx vitest run",
+    "ci-test": "npx vitest run",
     "coverage": "npx make-coverage-badge --output-path ./badges/coverage.svg",
     "format:write": "npx eslint --config eslint.config.js '**/*.{js,ts}'",
     "format:check": "npx eslint .",
@@ -36,7 +36,7 @@
     "local-action": "npx @github/local-action . src/main.ts .env",
     "package": "npx rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "package:watch": "pnpm run package -- --watch",
-    "test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 npx vitest run",
+    "test": "npx vitest run",
     "all": "pnpm run format:write && pnpm run lint && pnpm run package"
   },
   "dependencies": {
@@ -60,6 +60,8 @@
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
     "@vitest/coverage-istanbul": "^3.0.9",
+    "@vitest/coverage-v8": "3.0.9",
+    "@vitest/ui": "3.0.9",
     "eslint": "^9.23.0",
     "eslint-plugin-format": "^1.0.1",
     "make-coverage-badge": "^1.2.0",
