--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "package": "npx rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "package:watch": "pnpm run package -- --watch",
     "test": "npx vitest run",
-    "all": "pnpm run format:write && pnpm run lint && pnpm run package"
+    "all": "pnpm run format:write && pnpm run lint && pnpm run test && pnpm run package"
   },
   "dependencies": {
     "@actions/core": "^1.11.1",
