--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -58,6 +58,7 @@ jobs:
           VALIDATE_TYPESCRIPT_STANDARD: false
           VALIDATE_TYPESCRIPT_PRETTIER: false
           VALIDATE_YAML_PRETTIER: false
+          VALIDATE_MARKDOWN_PRETTIER: false
           VALIDATE_JAVASCRIPT_PRETTIER	: false
           VALIDATE_JSON_PRETTIER: false
           VALIDATE_SHELL_SHFMT: false
